# earth2-physicsnemo-weather-recipes

./: .gitignore  README.md  pyproject.toml
conf/datapipe/: era5_surface_manifest.yaml
conf/experiment/: era5_surface_demo.yaml
conf/inference/: earth2studio_deterministic_demo.yaml
conf/paths/: local.yaml
conf/training/: fcn_era5_baseline.yaml
data/: README.md
data/era5/: era5_surface_2018010100.npy  era5_surface_2018070100.npy  era5_surface_2019010100.npy  era5_surface_2019070100.npy  era5_surface_2020010100.npy  era5_surface_2020010106.npy  era5_surface_2020010112.npy  era5_surface_2020010200.npy  era5_surface_2021010100.npy
docs/: ROADMAP.md
scripts/: build_manifest.py  create_synthetic_era5.py  run_inference_demo.py
src/earth2_recipes/: __init__.py  manifests.py  metrics.py  model.py  plotting.py  utils.py
tests/: test_manifests.py  test_metrics.py  test_model.py
